src/objects/jiffle__Briefing__c.object
<CustomObject>
    <description>Used to store Jiffle Briefings</description>
    <fields>
        <fullName>jiffle__Additional_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>jiffle__Briefing_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Briefing Center</label>
        <referenceTo>jiffle__Briefing_Center__c</referenceTo>
        <relationshipLabel>Briefings</relationshipLabel>
        <relationshipName>Briefings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Briefing_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Briefing ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Briefing_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Briefing requestor (Lookup on Attendee)</description>
        <label>Briefing Requestor</label>
        <referenceTo>jiffle__Attendee__c</referenceTo>
        <relationshipLabel>Briefings Requested</relationshipLabel>
        <relationshipName>Briefings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Briefing_UUID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Briefing UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>jiffle__Duration__c</fullName>
        <description>Number of minutes the briefing lasted.</description>
        <formula>( jiffle__End_Date__c - jiffle__Start_Date__c )*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of minutes the briefing lasted.</inlineHelpText>
        <label>Duration (In Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jiffle__End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jiffle__Requestor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requestor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Briefing</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <columns>NAME</columns>
        <columns>jiffle__Briefing_Center__c</columns>
        <columns>jiffle__Briefing_UUID__c</columns>
        <columns>jiffle__Briefing_ID__c</columns>
        <columns>jiffle__Requestor__c</columns>
        <columns>jiffle__Request_Status__c</columns>
        <columns>jiffle__Start_Date__c</columns>
        <columns>jiffle__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>jiffle__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BR-{00000}</displayFormat>
        <label>Briefing Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Briefings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>